[package]
name = "metronome"
version = "0.1.0"
authors = ["Alexander Bethel <abethel@cs.nmt.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "0.13.1"
error-chain = "0.12.4"
getopts = "0.2.21"
num = "0.3.1"
termios = "0.3.3"
colorful = "0.2.1"
